<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="beconfirm.mysiam.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding">


        <!--kk-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/h1" />

        <ImageView
            android:id="@+id/btnblack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back" />


    </RelativeLayout>

    <ScrollView
        android:background="@color/colorPrimaryLight"
        android:layout_above="@+id/btnNewRegister"
        android:layout_below="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="#82ffffff"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_siam"
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_name" />

                <EditText
                    android:id="@+id/edtname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryLight" />


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user" />

                <EditText
                    android:id="@+id/edtuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryLight" />


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_pass" />

                <EditText
                    android:id="@+id/edtpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryLight" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@color/textColorPrimary" />

</RelativeLayout>
